# Fagprojekt_Modeling_the_structure_of_DNA

./: .gitignore  AGENTS.md  Main_LCB28202983.err  Main_LCB28202983.out  README.md  pyproject.toml  submit_jobs.sh  submit_peakvi_jobs.sh  tasks.py
notebooks/: stat.ipynb
results_small/: 16_weighting_False_run1.csv  16_weighting_False_run10.csv  16_weighting_False_run2.csv  16_weighting_False_run3.csv  16_weighting_False_run4.csv  16_weighting_False_run5.csv  16_weighting_False_run6.csv  16_weighting_False_run7.csv  16_weighting_False_run8.csv  16_weighting_False_run9.csv  16_weighting_True_run1.csv  16_weighting_True_run10.csv  16_weighting_True_run2.csv  16_weighting_True_run3.csv  16_weighting_True_run4.csv  16_weighting_True_run5.csv  16_weighting_True_run6.csv  16_weighting_True_run7.csv  16_weighting_True_run8.csv  16_weighting_True_run9.csv  2_weighting_False_run1.csv  2_weighting_False_run10.csv  2_weighting_False_run2.csv  2_weighting_False_run3.csv  2_weighting_False_run4.csv  2_weighting_False_run5.csv  2_weighting_False_run6.csv  2_weighting_False_run7.csv  2_weighting_False_run8.csv  2_weighting_False_run9.csv  2_weighting_True_run1.csv  2_weighting_True_run10.csv  2_weighting_True_run2.csv  2_weighting_True_run3.csv  2_weighting_True_run4.csv  2_weighting_True_run5.csv  2_weighting_True_run6.csv  2_weighting_True_run7.csv  2_weighting_True_run8.csv  2_weighting_True_run9.csv  (+60 more)
src/PCA/: PCA_on_Large_dataset.ipynb  main_PCA.py
src/PeakVI/: PeakVI.ipynb  PeakVI.py  PeakVi.sh  Reference_mapping.py  evaluate_peakvi.py  main_peakvi.py
src/benchmarking/: AUC_plot.py  Check_cell.py  KMeans.py  KMeans_PCA.py  KMeans_peak.py  KMeans_simba.py  KNFeatures.py  KNN.py  Metrics.py  Metrics_PCA.py  Metrics_peak.py  Metrics_peak_KMC.py  Metrics_simba.py  cell_types.txt  cell_types_subset_1.txt  celltype.py  plot_latentspace.py  plot_ldm.py  plot_ldm_umap_new.py  plot_pca.py  plot_peak_latentspace.py  plot_peak_latentspace_new.py  plot_simba_latentspace.py  plot_simba_latentspace_umap.py  plot_simba_umap_new.py  plot_small_latentspace.py
src/benchmarking/plotting_new/: plot_ldm_new.py  plot_ldm_umap_new.py  plot_pca.py  plot_peak_latentspace_new.py  plot_peak_umap_new.py  plot_simba_new.py  plot_simba_umap_new.py
src/benchmarking/plotting_old/: plot_latentspace.py  plot_ldm.py  plot_pca_variance.py  plot_small_latentspace.py
src/dna_modelling/: data.lsf  data.py  evaluate.py  evaluate_models.py  file_reader.py  latent_space_visualization.py  load_models.py  main.lsf  main.py  main_2.py  maketestsets.py  maketestsets.sh  model.py  stat.ipynb  subsets.py  train.py  visualize.py
src/dna_modelling/utils/: __init__.py  data.py  file_reader.py  visualize.py
src/scripts/: PCA.sh  PeakVi.sh  SIMBA.sh  bulk_jobs.sh  bulk_ldm.sh  bulk_load_models.sh  bulk_peakvi_jobs.sh  cpu_PeakVi.sh  evaluate_model.sh  gpu_PeakVi.sh  main.sh  main_2.sh  maketestsets.sh  subsets.sh
src/scripts/templates/: cpu_template.sh  gpu_template.sh
src/simba/: main_simba.py
tests/: test_data.py
