[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dna_modelling"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Emil", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "scikit-learn>=1.8.0",
    # Intel/any macOS: last supported macOS x86 build line
    "torch==2.2.2; platform_system == 'Darwin'",
    "torchvision==0.17.2; platform_system == 'Darwin'",
    # Linux: keep newer CUDA build
    "torch==2.6.0; platform_system == 'Linux'",
    "torchvision==0.21.0; platform_system == 'Linux'",
    "tqdm==4.67.1",
    "scanpy>=1.9.0",
    "llvmlite<0.46.0",
    "requests>=2.32.5",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "platform_system == 'Linux'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "invoke>=2.2.1",
    "mkdocs>=1.6.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.15.4",
]
