[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dna_modelling"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Emil", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.10,<3.13"

# Shared dependencies used by both CPU and GPU environments.
dependencies = [
    "numpy==1.26.4",
    "scikit-learn>=1.4,<1.8",
    "tqdm==4.67.1",
    "scanpy>=1.9.0",
    "umap-learn>=0.5.7",
    "llvmlite<0.46.0",
    "requests>=2.32.5",
    "scvi-tools>=1.3.2",
    "igraph>=1.0.0",
]

# PyTorch is split into optional extras so CPU and GPU environments
# can use the same project but install different torch builds.
[project.optional-dependencies]
cpu = [
    "torch==2.7.1",
    "torchvision==0.22.1",
]

gpu = [
    "torch==2.7.1+cu128",
    "torchvision==0.22.1+cu128",
]

simba = [
    "simba @ git+https://github.com/pinellolab/simba@dev",
    "pybedtools>=0.9",
    "scikit-misc>=0.3",
]

# Prevent installing both CPU and GPU extras at the same time.
[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]

# Tell uv where to get torch/torchvision depending on selected extra.
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "gpu" },
]

torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "invoke>=2.2.1",
    "mkdocs>=1.6.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.15.4",
]